--- a/Portafolio Web/index.html
+++ b/Portafolio Web/index.html
@@ -93,6 +93,9 @@
                 <div class="overlay">
                     <h3>Cripto Moneda</h3>
                     <p>Cripto moneda, con html-css y Js.</p>
+                    <br>
+                    <br>
+                    <a style="color: orange;" href="https://wilsonmoralesofficial.github.io/BataBit/">ver</a>
                 </div>
             </div>
             <div class="project-card animate__animated">
@@ -100,6 +103,9 @@
                 <div class="overlay">
                     <h3>Cafeteria</h3>
                     <p>Cafeteria utilizando,  html-css y Js.</p>
+                    <br>
+                    <br>
+                    <a style="color: orange;" href="https://refasmarlen.github.io/refass/">ver</a>
                 </div>
             </div>
             <div class="project-card animate__animated">
@@ -107,6 +113,9 @@
                 <div class="overlay">
                     <h3>Calculadora</h3>
                     <p>Calculadora con JavaScript.</p>
+                    <br>
+                    <br>
+                    <a style="color: orange;" href="https://julioaguilar001.github.io/Calculater/">ver</a>
                 </div>
             </div>
         </div>
